# organic

./: Makefile  pyproject.toml
Account/: admin.py  forms.py  models.py  urls.py  views.py
Account/migrations/: 0001_initial.py  0002_alter_profile_tell_alter_profile_user.py  0003_alter_profile_user.py  0004_alter_profile_user.py  0005_alter_shipping_user.py
Cart/: admin.py  context_processors.py  models.py  urls.py  views.py
Cart/migrations/: 0001_initial.py  0002_cart_created.py  0003_alter_cartitem_cart.py  0004_cart_session_id.py  0005_alter_cart_user.py
Organic/: settings.py  urls.py
Pages/: forms.py  models.py  urls.py  views.py
Pages/migrations/: 0001_initial.py  0002_remove_contact_tell.py
Products/: admin.py  choices.py  filters.py  forms.py  models.py  urls.py  views.py
Products/migrations/: 0001_initial.py  0002_alter_product_category_remove_product_tag_and_more.py  0003_product_unit.py  0004_product_search_rank_product_search_vector_and_more.py  0005_remove_product_products_pr_search__085b1a_idx_and_more.py  0006_rating.py  0007_alter_rating_product_alter_rating_user.py  0008_alter_rating_ratings.py  0009_productdiscount.py  0010_product_percentage_discount.py  0011_alter_product_percentage_discount.py  0012_alter_product_percentage_discount.py  0013_alter_productimage_product.py  0014_alter_product_percentage_discount.py
real/: pyvenv.cfg
static/css/: main.css
templates/: base.html
templates/accounts/: profile-update.html  profile.html
templates/carts/: carts.html  checkout.html
templates/includes/: footer.html  header.html
(+12 files in other folders)
